fix: add overflow-x to page to scroll content only

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -54,6 +54,7 @@ body {
     flex-grow: 1;
     justify-content: center;
     text-align: center;
+    overflow-x: auto;
 }
 
 .empty-state-group {
